@@ -6,6 +6,12 @@ Changelog
 
 4.0 - (2021-11-12)
 ---------------------------
+* fix PHP incorrectly shown on all sibling roles
+  [valipod refs #140578]
+* update climatecangeadaptation and climatechangemitigation role names
+  [valipod refs #140578]
+* fix PCP label (incorrectly shown as Mn)
+  [valipod refs #140578]
 * changes to support the new Eionet Groups replacing the NFP branch
   [valipod refs #140578]
 
